Fix Bug 326210 - Dolphin unnecessarily truncates names of soft links in compact mode

FIXED-IN: 4.13.0
BUG: 326210
BUG: 310592
REVIEW: 116121